--- a/app/i18n/cn.json
+++ b/app/i18n/cn.json
@@ -144,6 +144,7 @@
   "MODULES_DATABASE_ARCHIVED_DATA":"归档数据量",
   "MODULES_DATABASE_BROWSE_DATA":"浏览数据",
   "MODULES_DATABASE_DATA_BASE":"数据仓库",
+  "MODULES_DATABASE_PLEASE_SELECT_UNIT":"请选择单位",
 
   "MODULES_DATABASE_SIP_ID":"批次号",
   "MODULES_DATABASE_DATA_PATH":"数据位置",
@@ -264,11 +265,13 @@
   "MODULES_PROJECTMANAGE_EXPORT_TEMPLATE":"导出模版",
   "MODULES_PROJECTMANAGE_RECEIVING_PLATFORM_RETENTION_PERIOD":"遵循接收平台保管期限",
   "MODULES_PROJECTMANAGE_FOLLOW_THE_RECEIVING_PLATFORM":"遵循接收平台保留策略",
+  "MODULES_PROJECTMANAGE_PROVINCIAL_ARCHIVES_RULES":"遵循省归档局规则",
   "MODULES_PROJECTMANAGE_MODIFY_NAME":"修改名称",
   "MODULES_PROJECTMANAGE_BLOCK":"数据块",
   "MODULES_PROJECTMANAGE_NODE":"活动节点",
   "MODULES_PROJECTMANAGE_ADD_FILE":"添加文件",
   "MODULES_PROJECTMANAGE_FILE_LIST":"文件列表",
+  "MODULES_PROJECTMANAGE_FLOAT":"浮点型",
 
 
   "MODULES_SERVICEWATCH_SERVICE_MONITORING":"服务监控",
