--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -144,6 +144,7 @@
   "MODULES_DATABASE_ARCHIVED_DATA":"Archived Data",
   "MODULES_DATABASE_BROWSE_DATA":"Browse Data",
   "MODULES_DATABASE_DATA_BASE":"Data Base",
+  "MODULES_DATABASE_PLEASE_SELECT_UNIT":"Please select unit",
 
   "MODULES_DATABASE_SIP_ID":"SIP ID",
   "MODULES_DATABASE_DATA_PATH":"Data Path",
@@ -264,11 +265,13 @@
   "MODULES_PROJECTMANAGE_EXPORT_TEMPLATE":"Export Template",
   "MODULES_PROJECTMANAGE_RECEIVING_PLATFORM_RETENTION_PERIOD":"Receiving platform retention period",
   "MODULES_PROJECTMANAGE_FOLLOW_THE_RECEIVING_PLATFORM":"Receiving platform retention strategy",
+  "MODULES_PROJECTMANAGE_PROVINCIAL_ARCHIVES_RULES":"Provincial Archives rules",
   "MODULES_PROJECTMANAGE_MODIFY_NAME":"Modify Name",
   "MODULES_PROJECTMANAGE_BLOCK":"Block",
   "MODULES_PROJECTMANAGE_NODE":"Node",
   "MODULES_PROJECTMANAGE_ADD_FILE":"Add File",
   "MODULES_PROJECTMANAGE_FILE_LIST":"File List",
+  "MODULES_PROJECTMANAGE_FLOAT":"Float",
 
 
   "MODULES_SERVICEWATCH_SERVICE_MONITORING":"Service Monitor",
