--- a/app/i18n/cn.json
+++ b/app/i18n/cn.json
@@ -69,9 +69,12 @@
   "MODULES_BATCH_BATCH_CODE":"批次号",
   "MODULES_BATCH_BATCH_STATUS":"批次状态",
   "MODULES_BATCH_PACKAGE_AIU_START_DATE":"起始时间",
+  "MODULES_BATCH_CONVERSION_START_TIME":"转换开始时间",
   "MODULES_BATCH_PACKAGE_AIU_END_DATE":"结束时间",
+  "MODULES_BATCH_CONVERSION_END_TIME":"转换结束时间",
   "MODULES_BATCH_PACKAGE_COUNT":"数据包数量",
   "MODULES_BATCH_AIP_COUNT":"数据量",
+  "MODULES_BATCH_PACKET_CONVERSION_SUCCESSES":"转换成功数据包数量",
   "MODULES_BATCH_RECORD_NAME":"申报名称",
   "MODULES_BATCH_EXCEPTION_DESC":"异常说明",
   "MODULES_BATCH_EXCEPTION_HANDLE_BEHAVIOR":"异常处理",
@@ -97,6 +100,12 @@
   "PROJECT_CONNECTMAP_LOG_SERVICE":"日志服务",
   "PROJECT_CONNECTMAP_CONSUME_SECONDS":"耗时(秒)",
   "PROJECT_CONNECTMAP_IMPORT_ERMS_COUNT":"导入ERMS的数量",
+  "PROJECT_CONNECTMAP_LINKED_METHOD":"接入方式",
+  "PROJECT_CONNECTMAP_AIU_STORAGE_PATH":"AIU存储路径",
+  "PROJECT_CONNECTMAP_LINKED_TIME":"接入时间",
+  "PROJECT_CONNECTMAP_LATEST_UPDATE_TIME":"最新更新时间",
+  "PROJECT_CONNECTMAP_MONTHLY_ARCHIVE_NUMBER_OF_RECORDS":"本月归档记录数量",
+  "PROJECT_CONNECTMAP_SYSTEM_DATABASE_TYPE":"系统数据库类型",
 
 
   "MODULES_DATABASE_DATA_FILTERING":"数据过滤",
@@ -136,6 +145,7 @@
   "MODULES_DATABASE_MD5_CODE":"MD5码",
   "MODULES_DATABASE_LOADING":"正在加载...",
   "MODULES_DATABASE_DOCKING_SYSTEM":"对接系统",
+  "MODULES_DATABASE_SELECT_DOCKING_SYSTEM":"选择对接系统",
   "MODULES_DATABASE_DATA_UPDATE_TIME":"数据更新时间",
   "MODULES_DATABASE_DATA_SOURCE":"此数据源",
   "MODULES_DATABASE_GENERAL_LIBRARY":"总库",
@@ -230,6 +240,7 @@
   "MODULES_PROJECTMANAGE_MODULE_NAME":"模块名",
   "MODULES_PROJECTMANAGE_WIDTH":"宽度",
   "MODULES_PROJECTMANAGE_CANNOT_CONFIGURE_ARCHIVE_POLICY":"您还没有创建数据模板，无法配置归档策略",
+  "MODULES_PROJECTMANAGE_CANNOT_CONFIGURE_ARCHIVE_POLICY_SHOW_TEMPLATE":"您还没有创建数据模板，无法配置显示模版",
   "MODULES_PROJECTMANAGE_PROJECT_HAS_NOT_YET_DEFINED_STRATEGY":"该项目还没有定义策略",
   "MODULES_PROJECTMANAGE_IMMEDIATELY_CREATED":"立刻创建",
   "MODULES_PROJECTMANAGE_ARCHIVE_POLICY":"归档策略",
@@ -265,7 +276,7 @@
   "MODULES_PROJECTMANAGE_EXPORT_TEMPLATE":"导出模版",
   "MODULES_PROJECTMANAGE_RECEIVING_PLATFORM_RETENTION_PERIOD":"遵循接收平台保管期限",
   "MODULES_PROJECTMANAGE_FOLLOW_THE_RECEIVING_PLATFORM":"遵循接收平台保留策略",
-  "MODULES_PROJECTMANAGE_PROVINCIAL_ARCHIVES_RULES":"遵循省归档局规则",
+  "MODULES_PROJECTMANAGE_PROVINCIAL_ARCHIVES_RULES":"遵循省档案局规则",
   "MODULES_PROJECTMANAGE_MODIFY_NAME":"修改名称",
   "MODULES_PROJECTMANAGE_BLOCK":"数据块",
   "MODULES_PROJECTMANAGE_NODE":"活动节点",
