--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -69,9 +69,12 @@
   "MODULES_BATCH_BATCH_CODE":"Batch Code",
   "MODULES_BATCH_BATCH_STATUS":"Batch status",
   "MODULES_BATCH_PACKAGE_AIU_START_DATE":"Package AIU Start Date",
+  "MODULES_BATCH_CONVERSION_START_TIME":"Conversion start time",
   "MODULES_BATCH_PACKAGE_AIU_END_DATE":"Package AIP End Date",
+  "MODULES_BATCH_CONVERSION_END_TIME":"Conversion end time",
   "MODULES_BATCH_PACKAGE_COUNT":"Package Count",
   "MODULES_BATCH_AIP_COUNT":"AIP Count",
+  "MODULES_BATCH_PACKET_CONVERSION_SUCCESSES":"Successful package conversion count",
   "MODULES_BATCH_RECORD_NAME":"Record Name",
   "MODULES_BATCH_EXCEPTION_DESC":"Exception Desc",
   "MODULES_BATCH_EXCEPTION_HANDLE_BEHAVIOR":"Exception Handle Behavior",
@@ -97,6 +100,12 @@
   "PROJECT_CONNECTMAP_LOG_SERVICE":"Log service",
   "PROJECT_CONNECTMAP_CONSUME_SECONDS":"Consume(seconds)",
   "PROJECT_CONNECTMAP_IMPORT_ERMS_COUNT":"Import ERMS Count",
+  "PROJECT_CONNECTMAP_LINKED_METHOD":"Linked method",
+  "PROJECT_CONNECTMAP_AIU_STORAGE_PATH":"AIU storage path",
+  "PROJECT_CONNECTMAP_LINKED_TIME":"Linked time",
+  "PROJECT_CONNECTMAP_LATEST_UPDATE_TIME":"Latest update time",
+  "PROJECT_CONNECTMAP_MONTHLY_ARCHIVE_NUMBER_OF_RECORDS":"Monthly archive number of records",
+  "PROJECT_CONNECTMAP_SYSTEM_DATABASE_TYPE":"System Database Type",
 
 
   "MODULES_DATABASE_DATA_FILTERING":"Data filtering",
@@ -124,7 +133,7 @@
   "MODULES_DATABASE_COMPANY":"Company",
   "MODULES_DATABASE_SELECT_UNIT":"Select unit",
   "MODULES_DATABASE_BUSINESS_MATTERS":"Business Matters",
-  "MODULES_DATABASE_SELECT_BUSINESS_MATTERS":"Select business matters",
+  "MODULES_DATABASE_SELECT_BUSINESS_MATTERS":"Select Business Matters",
   "MODULES_DATABASE_BUSINESS_TRANSACTION":"Business Code",
   "MODULES_DATABASE_ESSENTIAL_INFORMATION":"Essential information",
   "MODULES_DATABASE_NODE_NAME":"Node name",
@@ -136,6 +145,7 @@
   "MODULES_DATABASE_MD5_CODE":"MD5 code",
   "MODULES_DATABASE_LOADING":"Loading...",
   "MODULES_DATABASE_DOCKING_SYSTEM":"Docking System",
+  "MODULES_DATABASE_SELECT_DOCKING_SYSTEM":"Select Docking System",
   "MODULES_DATABASE_DATA_UPDATE_TIME":"Data update time",
   "MODULES_DATABASE_DATA_SOURCE":"Data Source",
   "MODULES_DATABASE_GENERAL_LIBRARY":"General library",
@@ -230,6 +240,7 @@
   "MODULES_PROJECTMANAGE_MODULE_NAME":"Module Name",
   "MODULES_PROJECTMANAGE_WIDTH":"Width",
   "MODULES_PROJECTMANAGE_CANNOT_CONFIGURE_ARCHIVE_POLICY":"You have not created a data template and cannot configure the archive policy",
+  "MODULES_PROJECTMANAGE_CANNOT_CONFIGURE_ARCHIVE_POLICY_SHOW_TEMPLATE":"You have not created a show template and cannot configure the archive policy",
   "MODULES_PROJECTMANAGE_PROJECT_HAS_NOT_YET_DEFINED_STRATEGY":"The project has not yet defined strategy",
   "MODULES_PROJECTMANAGE_IMMEDIATELY_CREATED":"Immediately created",
   "MODULES_PROJECTMANAGE_ARCHIVE_POLICY":"Archive Policy",
